--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -39,3 +39,4 @@ expo.webp.enabled=true
 # Enable animated webp support (~3.4 MB increase)
 # Disabled by default because iOS doesn't support animated webp
 expo.webp.animated=false
+#org.gradle.java.home=/Library/Java/JavaVirtualMachines/jdk1.8.0_281.jdk/Contents/Home
