--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^6.3.1",
-    "@react-navigation/drawer": "^6.4.1",
+    "@react-navigation/drawer": "^5.12.4",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
     "expo": "~44.0.2",
@@ -19,10 +20,10 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-gesture-handler": "^2.4.1",
-    "react-native-reanimated": "^2.8.0",
-    "react-native-safe-area-context": "^4.2.5",
-    "react-native-screens": "^3.13.1",
+    "react-native-gesture-handler": "^1.10.3",
+    "react-native-reanimated": "~2.1.0",
+    "react-native-safe-area-context": "^3.2.0",
+    "react-native-screens": "~3.0.0",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
