--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-gesture-handler": "^2.4.1",
+    "react-native-paper": "^4.12.1",
     "react-native-reanimated": "^2.8.0",
     "react-native-safe-area-context": "^4.2.5",
     "react-native-screens": "^3.13.1",
+    "react-native-sms-retriever": "^1.1.1",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
