--- a/ios/Podfile
+++ b/ios/Podfile
@@ -22,6 +22,8 @@ target 'NT369' do
   #   use_flipper!('Flipper' => '0.75.1', 'Flipper-Folly' => '2.5.3', 'Flipper-RSocket' => '1.3.1')
   # end
 
+  pod 'RNReanimated', :path => '../node_modules/react-native-reanimated'
+
   post_install do |installer|
     react_native_post_install(installer)
 
