--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-confirmation-code-field": "^7.3.0",
     "react-native-gesture-handler": "^2.4.1",
     "react-native-paper": "^4.12.1",
     "react-native-reanimated": "^2.8.0",
